# indiclient

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: indiclient-tests.yml
docs/: conf.py
indiclient/: _astropy_init.py  conftest.py  indicam.py  indiclient.py
indiclient/tests/: test_ccdcam.py
licenses/: LICENSE.rst
notebooks/: indi_dev.ipynb
sbigclient/: indiclient.py  sbigcam.py  sbigindi.py
scripts/: f9_cooling_off  f9_cooling_on  f9_default_config  f9_wfs_config  get_f9_image  rc.local  rc.local-bacnet  start_indi  start_indi-bacnet  start_indi_f9  start_indi_matcam
system_images/: f9indi_backup.img.7z.001  f9indi_backup.img.7z.002  matcam_backup.img.7z.001  matcam_backup.img.7z.002  matcam_backup.img.7z.003
