[metadata]
name = indiclient
author = T. E. Pickering (MMT Observatory)
author_email = te.pickering@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://github.com/mmtobservatory/indiclient
description = Python-based INDI client utilities
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mmtobservatory/indiclient

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy

[options.extras_require]
test =
    pytest-astropy
    coverage
docs =
    sphinx-astropy

[options.package_data]
indiclient = data/*

[tool:pytest]
testpaths = "indiclient" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    indiclient/_astropy_init*
    indiclient/conftest.py
    indiclient/*setup_package*
    indiclient/tests/*
    indiclient/*/tests/*
    indiclient/extern/*
    indiclient/version*
    */indiclient/_astropy_init*
    */indiclient/conftest.py
    */indiclient/*setup_package*
    */indiclient/tests/*
    */indiclient/*/tests/*
    */indiclient/extern/*
    */indiclient/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
